UI: Consistent terminology in the color picker : low hanging fruit/ lowest priority #75667

Closed
opened 2020-04-13 02:17:44 +02:00 by Jeric Chard · 3 comments

Blender Version
Broken: 2.82a

Consistent terminology in the color picker : low hanging fruit/ lowest priority
In the Texture Paint color picker, there are two color swatches:

The first is labeled "Color". Fine. The 2nd is labeled "Secondary Color". Fine. The little gizmo that swaps them around is labeled "Brush Colors Flip: Toggle foreground and background brush colors".

This is real OCD stuff, BUT:

IMO, "Swap" would be better than 'flip' AND 'toggle'. --Flip doesn't mean much, esp. since the swatches are laid out horizontally. --'Toggle' is more appropriate in states that are enabled/disabled. -- 'Swap' would be both more accurate and more descriptive.

"Foreground" and "background" -- suddenly, new terms. Should be "Color and Secondary Color" if sticking with the current naming. Consistency, please.

YMMV, but if there's a 'Secondary Color', IMO the other one should be the 'Primary Color'.

I realize this is minutia, but on the other hand, it's super-easy to get right, because it's just a few text labels.

**Blender Version** Broken: 2.82a Consistent terminology in the color picker : low hanging fruit/ lowest priority In the Texture Paint color picker, there are two color swatches: The first is labeled "Color". Fine. The 2nd is labeled "Secondary Color". Fine. The little gizmo that swaps them around is labeled "Brush Colors Flip: Toggle foreground and background brush colors". This is real OCD stuff, BUT: IMO, "Swap" would be better than 'flip' AND 'toggle'. --Flip doesn't mean much, esp. since the swatches are laid out horizontally. --'Toggle' is more appropriate in states that are enabled/disabled. -- 'Swap' would be both more accurate and more descriptive. "Foreground" and "background" -- suddenly, new terms. Should be "Color and Secondary Color" if sticking with the current naming. Consistency, please. YMMV, but if there's a 'Secondary Color', IMO the other one should be the 'Primary Color'. I realize this is minutia, but on the other hand, it's super-easy to get right, because it's just a few text labels.
Author

Added subscriber: @jeric_synergy

Added subscriber: @jeric_synergy

This issue was referenced by e63d5f40ee

This issue was referenced by e63d5f40eef3349f26205d42cf7d11f9c01df6d9

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
William Reynish self-assigned this 2020-04-13 07:50:32 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#75667
No description provided.