Fix T75667: Use of incorrect terminology in the brush_colors_flip operator

- The word 'Flip' is incorrect. 'Swap' or 'Switch' is correct.
  - In Blender, we use 'primary' & 'secondary' color swatches, not 'foreground' and 'background'